Fixing several issues: *submission links *ranks not calculated correcly *a layout issue with Firefox *showing submissions from non-public Adding database type and server as parameters

--- a/modules/ext.bracketContest.BasePage.css
+++ b/modules/ext.bracketContest.BasePage.css
@@ -29,6 +29,13 @@
 	line-height: 20px;
 }
 
+#contest .small-icon-filler {
+	width: 25px;
+	height: 25px;
+	display: inline-block;
+	vertical-align: bottom;
+}
+
 #contest td.starcraft-brood-war {
 	padding-left: 30px;
 	/* @embed */
